--- a/TranferLearningEXP.ipynb
+++ b/TranferLearningEXP.ipynb
@@ -65,6 +65,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hUQK4yhuyAXs"
+      },
+      "outputs": [],
       "source": [
         "# Display some input images\n",
         "def show_sample_images(dataset, num_images=5):\n",
@@ -76,24 +81,19 @@
         "        axes[i].set_title(dataset.classes[label])\n",
         "        axes[i].axis(\"off\")\n",
         "    plt.show()"
-      ],
-      "metadata": {
-        "id": "hUQK4yhuyAXs"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Show sample images from the training dataset\n",
-        "show_sample_images(train_dataset)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "YYQUbifXyBHs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Show sample images from the training dataset\n",
+        "show_sample_images(train_dataset)"
+      ]
     },
     {
       "cell_type": "code",
@@ -119,11 +119,12 @@
       },
       "outputs": [],
       "source": [
-        "# Get the total number of samples in the testing dataset\n",
-        "\n",
+        "# Get the total number of samples in the training dataset\n",
+        "print(f\"Total number of training samples: {len(train_dataset)}\")\n",
         "\n",
         "# Get the shape of the first image in the dataset\n",
-        "\n"
+        "first_image, label = train_dataset[0]\n",
+        "print(f\"Shape of the first image: {first_image.shape}\")"
       ]
     },
     {
@@ -151,23 +152,24 @@
         "# Load a pre-trained VGG19 model\n",
         "# write your code here\n",
         "\n",
-        "\n",
+        "from torchvision.models import VGG19_Weights\n",
+        "model=models.vgg19(weights=VGG19_Weights.DEFAULT)\n",
         "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5k7kl3SDWh1K"
+      },
+      "outputs": [],
       "source": [
         "# Move model to GPU if available\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "model = model.to(device)"
-      ],
-      "metadata": {
-        "id": "5k7kl3SDWh1K"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -192,22 +194,28 @@
       "source": [
         "# Modify the final fully connected layer to match the dataset classes\n",
         "# Write your code here\n",
+        "num_classes = 1  # Get the number of classes in your dataset\n",
         "\n",
+        "# Get the input size of the last layer\n",
+        "in_features = model.classifier[6].in_features\n",
+        "\n",
+        "# Replace the last fully connected layer with a new one\n",
+        "model.classifier[6] = nn.Linear(in_features, num_classes)\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QXeX0fnffz_w"
+      },
+      "outputs": [],
       "source": [
         "# Move model to GPU if available\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "model = model.to(device)"
-      ],
-      "metadata": {
-        "id": "QXeX0fnffz_w"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -230,7 +238,7 @@
       "source": [
         "# Freeze all layers except the final layer\n",
         "for param in model.features.parameters():\n",
-        "    param.requires_grad = False  # Freeze feature extractor layers"
+        "    param.requires_grad = False  # Freeze feature extractor layer"
       ]
     },
     {
@@ -242,8 +250,8 @@
       "outputs": [],
       "source": [
         "# Include the Loss function and optimizer\n",
-        "criterion =\n",
-        "optimizer ="
+        "criterion = nn.BCEWithLogitsLoss()\n",
+        "optimizer = optim.Adam(model.classifier[-1].parameters, lr=0.001)"
       ]
     },
     {
@@ -287,8 +295,8 @@
         "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_losses[-1]:.4f}, Validation Loss: {val_losses[-1]:.4f}')\n",
         "\n",
         "    # Plot training and validation loss\n",
-        "    print(\"Name:        \")\n",
-        "    print(\"Register Number:        \")\n",
+        "    print(\"Name: SETHUKKARASI C \")\n",
+        "    print(\"Register Number: 212223230201 \")\n",
         "    plt.figure(figsize=(8, 6))\n",
         "    plt.plot(range(1, num_epochs + 1), train_losses, label='Train Loss', marker='o')\n",
         "    plt.plot(range(1, num_epochs + 1), val_losses, label='Validation Loss', marker='s')\n",
@@ -301,31 +309,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DdUBPt5sfnPS"
+      },
+      "outputs": [],
       "source": [
         "# Move model to GPU if available\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "model = model.to(device)"
-      ],
-      "metadata": {
-        "id": "DdUBPt5sfnPS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Train the model\n",
-        "# Write your code here\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "1HyIpDqcfooh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Train the model\n",
+        "# Write your code here\n",
+        "train_model(model, train_loader,test_loader,num_epochs=10)\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -358,8 +366,8 @@
         "\n",
         "    # Compute confusion matrix\n",
         "    cm = confusion_matrix(all_labels, all_preds)\n",
-        "    print(\"Name:        \")\n",
-        "    print(\"Register Number:        \")\n",
+        "    print(\"Name: SETHUKKARASI C \")\n",
+        "    print(\"Register Number: 212223230201 \")\n",
         "    plt.figure(figsize=(8, 6))\n",
         "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=train_dataset.classes, yticklabels=train_dataset.classes)\n",
         "    plt.xlabel('Predicted')\n",
@@ -368,8 +376,8 @@
         "    plt.show()\n",
         "\n",
         "    # Print classification report\n",
-        "    print(\"Name:        \")\n",
-        "    print(\"Register Number:        \")\n",
+        "    print(\"Name: SETHUKKARASI C \")\n",
+        "    print(\"Register Number: 212223230201 \")\n",
         "    print(\"Classification Report:\")\n",
         "    print(classification_report(all_labels, all_preds, target_names=train_dataset.classes))\n"
       ]
@@ -384,7 +392,7 @@
       "source": [
         "# Evaluate the model\n",
         "# write your code here\n",
-        "\n",
+        "test_model(model, test_loader)\n",
         "\n"
       ]
     },
@@ -435,21 +443,22 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Example Prediction\n",
-        "predict_image(model, image_index=25, dataset=test_dataset)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Aw5tXR4rXsI5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Example Prediction\n",
+        "predict_image(model, image_index=25, dataset=test_dataset)"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -457,8 +466,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
